WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189540
Linking against libWPEWebKit-0.1.so is not posible when WPE is build with ENABLE_VIDEO=OFF and ENABLE_WEB_AUDIO=OFF
https://bugs.webkit.org/show_bug.cgi?id=189540
Summary
Linking against libWPEWebKit-0.1.so is not posible when WPE is build with ENA...
Pablo Saavedra
Reported
2018-09-12 01:06:41 PDT
Linking against a built libWPEWebKit-0.1.so is not posible when WPE is build with: -DENABLE_VIDEO=OFF -DENABLE_WEB_AUDIO=OFF Error: platform/mediastream/libwebrtc/LibWebRTCProviderGlib.cpp only is added if `ENABLE_VIDEO OR ENABLE_WEB_AUDIO` (L1 in Source/WebCore/platform/GStreamer.cmake) so `WebCore::LibWebRTCProvider::webRTCAvailable() and `WebCore::LibWebRTCProvider::create()' are not defined and the shared library is incomplete. /home/igalia/psaavedra/vorwerk-bsp/builds/wandboard/tmp/work/armv7ahf-neon-poky-linux-gnueabi/cog/gitAUTOINC-r0/recipe-sysroot/usr/lib/libWPEWebKit-0.1.so: undefined reference to `WebCore::LibWebRTCProvider::webRTCAvailable()' /home/igalia/psaavedra/vorwerk-bsp/builds/wandboard/tmp/work/armv7ahf-neon-poky-linux-gnueabi/cog/gitAUTOINC-r0/recipe-sysroot/usr/lib/libWPEWebKit-0.1.so: undefined reference to `WebCore::LibWebRTCProvider::create()' collect2: error: ld returned 1 exit status Other considerations: Actual CMake flags used for tests: -DPORT=WPE \ -DCMAKE_BUILD_TYPE=Release \ -DENABLE_ACCELERATED_2D_CANVAS=ON \ -DENABLE_DEVICE_ORIENTATION=OFF \ -DENABLE_ENCRYPTED_MEDIA=OFF \ -DENABLE_FETCH_API=ON \ -DENABLE_GAMEPAD=OFF \ -DENABLE_GEOLOCATION=OFF \ -DUSE_GSTREAMER_GL=OFF \ -DENABLE_MEDIA_SOURCE=OFF \ -DENABLE_REMOTE_INSPECTOR=ON \ -DENABLE_VIDEO=OFF \ -DENABLE_VIDEO_TRACK=OFF \ -DENABLE_WEB_AUDIO=OFF \ -DENABLE_WEB_CRYPTO=OFF \ -DUSE_WOFF2=ON WebRTC is not enabled in the CMake configuration: cat build/cmakeconfig.h | grep RTC #define ENABLE_WEB_RTC 0 #define USE_LIBWEBRTC 0 #define WEBRTC_WEBKIT_BUILD 0 Related issues: This issue is related with changes in
https://bugs.webkit.org/show_bug.cgi?id=183080
This issue is introduced in
https://bugs.webkit.org/show_bug.cgi?id=186547
Attachments
patch
(2.94 KB, patch)
2018-09-12 01:12 PDT
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
patch
(2.93 KB, patch)
2018-09-12 01:25 PDT
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2018-09-12 01:12:36 PDT
Created
attachment 349531
[details]
patch
EWS Watchlist
Comment 2
2018-09-12 01:15:30 PDT
Attachment 349531
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:10: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:11: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 3
2018-09-12 01:18:25 PDT
Looks good! Not sure why the style-checker complained though, can you check it?
Pablo Saavedra
Comment 4
2018-09-12 01:25:28 PDT
Created
attachment 349532
[details]
patch
Pablo Saavedra
Comment 5
2018-09-12 01:33:10 PDT
(In reply to Philippe Normand from
comment #3
)
> Looks good! Not sure why the style-checker complained though, can you check > it?
fixed. The style checker interprets a "* ___:___" pattern as a file change description item.
WebKit Commit Bot
Comment 6
2018-09-12 02:12:04 PDT
Comment on
attachment 349532
[details]
patch Clearing flags on attachment: 349532 Committed
r235933
: <
https://trac.webkit.org/changeset/235933
>
WebKit Commit Bot
Comment 7
2018-09-12 02:12:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-09-12 02:13:43 PDT
<
rdar://problem/44376382
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug