Linking against libWPEWebKit-0.1.so is not posible when WPE is build with ENABLE_VIDEO=OFF and ENABLE_WEB_AUDIO=OFF https://bugs.webkit.org/show_bug.cgi?id=189540

Patch by Pablo Saavedra <psaavedra@igalia.com> on 2018-09-12
Reviewed by Philippe Normand.

Related issues:

This issue is related with changes in https://bugs.webkit.org/show_bug.cgi?id=183080
This issue is introduced in https://bugs.webkit.org/show_bug.cgi?id=186547

No new tests, no changes in the functionality.

* platform/GStreamer.cmake:
* platform/SourcesGLib.txt:
* platform/mediastream/libwebrtc/LibWebRTCProviderGlib.cpp:
(WebCore::LibWebRTCProvider::webRTCAvailable):

Canonical link: https://commits.webkit.org/204513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235933 268f45cc-cd09-0410-ab3c-d52691b4dbfc